posts aren't working, everything else is super close

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -223,6 +223,11 @@
   }
 }
 
+.tab {
+  border-top: 0px !important;
+  margin-top: -1vh !important;
+}
+
 .opportunity-row {
   margin: 14px;
   border: 1px solid $lightgrey;
