--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,8 +32,8 @@
   <aside class="home-page-aside">
     <div class="homepage-header" id="home-step4">
       <div class="tab hp">
-        <button class="tablinks hp" onclick="openTab(event, 'opps-near-me')" id="defaultOpen">Open Opportunities</button>
-        <button class="tablinks hp" onclick="openTab(event, 'my-opps')">My Opportunities</button>
+        <button class="tablinks hp" onclick="openTab(event, 'opps-near-me')" id="defaultOpen">Open</button>
+        <button class="tablinks hp" onclick="openTab(event, 'my-opps')">Active</button>
       </div>
     </div>
     <div id="opps-near-me" class="tabcontent hp">
