--- a/app/assets/stylesheets/opportunities.scss
+++ b/app/assets/stylesheets/opportunities.scss
@@ -28,6 +28,11 @@
 
 
 
+.tablinks {
+  width: 100% !important;
+
+}
+
 .opportunity-header {
   display: flex;
   flex-direction: column;
@@ -47,11 +52,12 @@
 }
 
 .opportunity-tab-links {
-  grid-column: 2;
+  //grid-column: 2;
   height: 100%;
   overflow-y: scroll;
   color: #fff;
-
+  border-top: 1px solid $lightgrey;
+  padding-top: 1vh;
   & h3 {
     margin: 0;
   }
@@ -62,14 +68,17 @@
   }
 }
 
-.add-requirement-button {
-  padding-top: 3vh;
-  text-align: center;
-}
+// .add-tabitem-button {
+//   padding-top: 3vh;
+//   text-align: center;
+//   width: 100% !important;
+// }
 
-.add-post-button {
-  text-align: center;
-  padding-top: 1vh;
+.add-tabitem-btn {
+  width: 100%;
+  height: 8vh;
+  padding-top: 2vh;
+  font-size: 2em !important;
 }
 
 .tab-heading {
