--- a/app/views/opportunities/_requirement_row.html.erb
+++ b/app/views/opportunities/_requirement_row.html.erb
@@ -2,7 +2,7 @@
   <div>
     <a href="/requirements/<%= requirement.id %>">
       <p class="post-title"><%= requirement.title %></p>
-      <p class="post-excerpt"><%= requirement.description %></p>
+      <p class="post-excerpt"><%= requirement.display_description %></p>
       <br>
       <p class="post-author"><strong>Due date: </strong><%= requirement.target_completion_date %></p>
       <p class="post-author"><strong>Priority: </strong><%= requirement.priority %></p>
