--- a/app/views/personal_messages/_personal_message.html.erb
+++ b/app/views/personal_messages/_personal_message.html.erb
@@ -1,4 +1,7 @@
-<p><%= emojify personal_message.body %></p>
-<p>at <strong><%= personal_message.created_at %></strong><br>
-  by <strong><%= personal_message.user.username %></strong></p>
-<hr>
+<div class="message">
+  <p class="message-body"><%= emojify personal_message.body %></p>
+  <div class="message-meta">
+    <p class="message-time">at <strong><%= local_time(personal_message.created_at, "%l:%M%P on %-m/%-d/%y") %></strong>
+      by <strong class="message-username"><%= personal_message.user.username %></strong></p>
+  </div>
+</div>
