--- a/app/views/requirements/show.html.erb
+++ b/app/views/requirements/show.html.erb
@@ -133,7 +133,7 @@
       <% end %>
       <% if current_user && ((@req_level && @req_level <= 2) || @opp_level <= 2) %>
         <div class="add-post-button">
-          <%= link_to 'Add A Post', new_post_path(:opportunity => {:opportunity_id => @opportunity.id}), class: "btn btn-success btn-lg", data: { modal: true } %>
+          <%= link_to 'New Post', new_post_path(:opportunity => {:id => @opportunity.id}), class: "btn btn-success btn-lg add-tabitem-btn", data: { modal: true } %>
         </div>
       <% end %>
     </div>
