--- a/app/views/opportunities/_requirement_row.html.erb
+++ b/app/views/opportunities/_requirement_row.html.erb
@@ -1,11 +1,17 @@
-<div class="requirement-row">
-  <div>
-    <a href="/requirements/<%= requirement.id %>">
-      <p class="post-title"><%= requirement.title %></p>
-      <p class="post-excerpt"><%= requirement.display_description %></p>
-      <br>
-      <p class="post-author"><strong>Due date: </strong><%= requirement.target_completion_date %></p>
-      <p class="post-author"><strong>Priority: </strong><%= requirement.priority %></p>
-    </a>
-  </div>
+<div class="requirement-row <%= 'requirement-row-complete' if requirement.complete %>">
+  <a href="/requirements/<%= requirement.id %>">
+    <div class="jbh-grid-container">
+      <div class="jbh-grid-first">
+        <p class="requirement-row-title"><%= requirement.title %></p>
+        <p class="requirement-row-excerpt"><%= requirement.display_description %></p>
+        <p class="requirement-row-author"><strong>Due date: </strong><%= requirement.target_completion_date %></p>
+        <p class="requirement-row-author"><strong>Priority: </strong><%= requirement.priority %></p>
+      </div>
+      <div class="jbh-grid-second">
+        <p class="requirement-row-category"><strong>Category: </strong><%= requirement.category_title %></p>
+        <p class="requirement-row-subcategory"><strong>Subcategory: </strong><%= requirement.subcategory_title %></p>
+        <p class="requirement-row-status"><strong>Status: </strong><%= requirement.status %></p>
+      </div>
+    </div>
+  </a>
 </div>
