--- a/app/views/opportunities/edit.html.erb
+++ b/app/views/opportunities/edit.html.erb
@@ -1,4 +1,4 @@
 <h1>Editing Opportunity</h1>
-<%= render 'form', opportunity: @opportunity %>
+<%= render 'editform', opportunity: @opportunity %>
 <%= link_to 'Show', @opportunity %> |
 <%= link_to 'Back', opportunities_path %>
