--- a/app/views/opportunities/new.html.erb
+++ b/app/views/opportunities/new.html.erb
@@ -1,2 +1,2 @@
 <div class="jbh-standard-title">Create a new volunteer opportunity</div>
-<%= render 'form', opportunity: @opportunity %>
+<%= render 'creationform', opportunity: @opportunity %>
