--- a/app/views/requirements/edit.html.erb
+++ b/app/views/requirements/edit.html.erb
@@ -1,2 +1,2 @@
-<h4 class="modal-title" id="mainModalLabel">Editing Requirement</h4>
+<div class="jbh-standard-title">Editing Requirement</div>
 <%= render 'form', requirement: @requirement %>
