--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -37,6 +37,7 @@ p, a, span {
   font-size: 2.8em;
   padding-left: 5vw;
   margin-right: 20vw;
+  margin-bottom: 3vh;
   padding-top: 2vh;
   color: $darkgrey;
   border-bottom: 2px solid $lightgrey;
