--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -9,6 +9,7 @@ $light: #DEE7ED;
 $dark: #1E2326;
 
 $limegreen: #99cc66;
+$limegreen-low-opacity: rgba(153,204,102,.3);
 $darkblue: #006699;
 $lightblue: #99ccff;
 $lightpink: #E9B1E0;
