actiontext is basically there, just got a little bit more stuff that needs to happen

--- a/app/assets/stylesheets/actiontext.scss
+++ b/app/assets/stylesheets/actiontext.scss
@@ -8,6 +8,11 @@
 // We need to override trix.css’s image gallery styles to accommodate the
 // <action-text-attachment> element we wrap around attachments. Otherwise,
 // images in galleries will be squished by the max-width: 33%; rule.
+
+
+@import 'mixins.scss';
+
+
 .trix-content {
   .attachment-gallery {
     > action-text-attachment,
@@ -32,5 +37,22 @@
       padding: 0 !important;
       max-width: 100% !important;
     }
+  }
+}
+
+
+// NOTE!!!
+// This button is hidden because attachments don't seem to be working correctly. 
+// Images can be pasted into the post and will work correctly but they CANNOT be 
+// attached directly. I don't understand why, but for now this is good enough.
+.trix-button--icon-attach {
+  display: none !important;
+}
+
+.trix-button {
+  font-size: 1.5em !important;
+
+  @include respond-to(handhelds) {
+    font-size: 1em !important;
   }
 }
