--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,7 +1,2 @@
-<h1>New Comment</h1>
-
-
-
+<div class="jbh-standard-title">Adding A Comment</div>
 <%= render 'form', comment: @comment %>
-
-<%= link_to 'Back', :back %>
