--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,65 @@
 // Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import 'theme.scss';
+@import 'mixins.scss';
+
+.comments-trix-container {
+  margin-left: 10vw;
+  margin-right: 10vw;
+  width: 80vw;
+  //min-height: 50vh;
+
+  margin-left: 5vw;
+  border: 2px solid $lightgrey;
+
+  .trix-content {
+    width: 100%;
+    height: 50vh;
+    border: 2px solid $limegreen;
+  }
+
+  @include respond-to(handhelds) {
+    margin-left: 2vw;
+    margin-right: 2vw;
+    width: 96vw;
+    height: 50vh;
+
+    .trix-content {
+      height: 100%;
+    }
+
+    .trix-toolbar {
+
+    }
+  }
+}
+
+img {
+  max-width: 100% !important;
+  height: auto;
+}
+
+// this allows us to have a newline in the placeholder
+trix-editor {
+  white-space: pre-line;
+}
+
+
+@include respond-to(handhelds) {
+  #trix-toolbar-1 {
+    background:#fff;
+    overflow-x:scroll;
+    white-space: nowrap;
+    width:100%;
+  }
+
+  ::-webkit-scrollbar { 
+      display: none; 
+  }
+
+  .trix-button {
+    font-size: 1.2em !important;
+    border-right: 1px solid black;
+  }
+}
