--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -20,6 +20,15 @@
   border-color: black;
 }
 
+.trix-content {
+  width: 100%;
+  height: 100%;
+}
+
+.trix-container {
+  height: 50vh;
+  border: 2px solid $lightgrey;
+}
 
 .original-post-content {
   padding-top: 3vh;
