--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -9,7 +9,8 @@ $light: #DEE7ED;
 $dark: #1E2326;
 
 $limegreen: #99cc66;
-$limegreen-low-opacity: rgba(153,204,102,.3);
+$limegreen-low: rgba(153,204,102,.3);
+$limegreen-mid: rgba(153,204,102,.6);
 $darkblue: #006699;
 $lightblue: #99ccff;
 $lightpink: #E9B1E0;
