--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -46,6 +46,41 @@ p, a, span {
   }
 }
 
+.jbh-green-btn-container {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+  width: 80vw;
+  height: 1.8em;
+  border: 2px solid $midgrey;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 2em;
+  background-color: $limegreen;
+
+  & a {
+    color: black;
+  }
+
+  &:hover {
+
+    transform: scale(1.05);
+    & a {
+      text-decoration: none;
+      color: black;
+    }
+
+
+  }
+
+  .jbh-btn-text {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+
 .btn-success {
   background-color: $limegreen !important;
 }
