--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -13,10 +13,8 @@
   list-style-type: none;
   padding-left: 1vw;
   padding-right: 1vw;
-  margin-right: 1vw;
-  margin-left: 1vw;
-  margin-bottom: 1vh;
-  margin-top: 1vh;
+  // margin-right: 1vw;
+  // margin-left: 1vw;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -29,9 +27,16 @@
 
 }
 
+.desktop-nav {
+  
+}
+.navbar-nav {
+  margin-left: auto;
+}
+
 .navbar-logo {
   width: auto;
-  max-width: 25vw;
+  max-width: 22vw;
 
   @include respond-to(handhelds) {
     max-width: 65vw;
@@ -39,16 +44,21 @@
 }
 
 .nav-item {
-  border: 2px solid $midgrey;
-  border-radius: 10px;
-  padding-left: 4vw;
-  padding-right: 4vw;
+  // border-radius: 10px;
+  // padding-left: 4vw;
+  // padding-right: 4vw;
+  border-right: 1px solid $midgrey;
+  height: 100%;
+}
+
+.last-nav-item {
+  border-right: 0px;
 }
 
 
 
 .nav-link {
-  color: $midgrey !important;
+  color: $darkgrey !important;
   text-transform: uppercase;
   font-size: 1.2rem;
 }
@@ -76,8 +86,8 @@
   -webkit-box-flex: 1;
   flex-grow: 1;
   -webkit-box-align: center;
-  align-items: right;
   width: 100%;
+  height: 100%;
 
   @include respond-to(medium-screens) {
     display: none;
