--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,18 +6,9 @@
 
 .original-post {
   padding-left: 1vw;
-  padding-bottom: 3vh;
-  margin-bottom: 30px;
-  background-color: $midgrey;
-}
-
-.original-post-title {
-  padding-top: 2vh;
-  padding-left: 2vw;
-  padding-right: 2vw;
-  color: $limegreen;
-  border-bottom: 2px solid;
-  border-color: black;
+  // padding-bottom: 3vh;
+  // margin-bottom: 30px;
+  border-bottom: 1px solid $lightgrey;
 }
 
 .trix-content {
@@ -31,9 +22,6 @@
 }
 
 .original-post-content {
-  padding-top: 3vh;
-  padding-left: 4vw;
-  padding-right: 10vw;
   font-size: 1.3rem;
 
 }
@@ -45,28 +33,27 @@
 
 
 .comments-container {
-
+  margin-left: 5vw;
 }
 
 .comment-card {
-  background-color: #959CA0;
   &:nth-of-type(even) {
-    background: #4099cc;
+    background: $lightgrey;
   }
-  border-bottom: 1px solid;
+  border-bottom: 2px solid $darkgrey;
+  width: 80vw;
+  margin-bottom: 1vh;
 }
 
 .comment-divider {
  height:1px;
  width: 80%;
  text-align: center;
- background-color: black;
+ background-color: $midgrey;
 }
 
-.comment-content {
-  padding-left: 3vw;
-  padding-right: 2vw;
-  padding-top: 2vw;
+.comment-meta {
+  margin-top: 1vh;
 }
 
 .comment-content:after {
