--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing User</h1>
-
+<div class="jbh-standard-title">Editing User</div>
 <%= render 'form', user: @user %>
-
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
