--- a/app/assets/stylesheets/actiontext.scss
+++ b/app/assets/stylesheets/actiontext.scss
@@ -20,6 +20,7 @@
       flex: 1 0 33%;
       padding: 0 0.5em;
       max-width: 33%;
+
     }
 
     &.attachment-gallery--2,
@@ -36,6 +37,10 @@
     .attachment {
       padding: 0 !important;
       max-width: 100% !important;
+      img {
+        max-width: 100%;
+        height: auto;
+      }
     }
   }
 }
