--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -58,7 +58,7 @@ p, a, span {
   text-align: center;
   font-size: 2em;
   background-color: $limegreen;
-
+  color: black;
   & a {
     color: black;
   }
