--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -16,8 +16,10 @@
     </div>
   </div>
   <div class="landing-padding-middle"></div>
-  <div class="d-flex justify-content-center start-volunteering-container">
-    <a class="btn btn-danger btn-lg start-volunteering-btn" href="/users/sign_in" role="button">Let's start volunteering!</a>
+  <div class="d-flex justify-content-center start-volunteering-container jbh-green-btn-container">
+    <a class="start-volunteering-btn" href="/users/sign_in" role="button">
+      <div class="jbh-btn-text">Let's start volunteering!</div>
+    </a>
   </div>
   <div class="landing-padding-middle"></div>
   <div class="aboutus-community-guidelines">
